packages/ui/src/globals.css
@import "tailwindcss";
@config "../tailwind.config.ts";

/* body {
  font-family: Arial, Helvetica, sans-serif;
} */

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }

  /* Custom scroll styles */
  ::-webkit-scrollbar {
    width: 8px;
  }

  ::-webkit-scrollbar-track {
    background: #f1f1f1;
  }

  ::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 5px;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }

  ::-webkit-scrollbar {
    width: 8px;
    /* height: 9px; */
    height:0px;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 20 14.3% 4.1%;
    --card: 0 0% 100%;
    --card-foreground: 20 14.3% 4.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 20 14.3% 4.1%;
    /* --primary: 24.6 95% 53.1%; */
    --primary: 12 100% 63%; /* ff6842 */
    --primary-foreground: 60 9.1% 97.8%;
    --secondary: 60 4.8% 95.9%;
    --secondary-foreground: 24 9.8% 10%;
    --muted: 60 4.8% 95.9%;
    --muted-foreground: 25 5.3% 44.7%;
    --accent: 60 4.8% 95.9%;
    --accent-foreground: 24 9.8% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 20 5.9% 90%;
    --input: 20 5.9% 90%;
    --ring: 24.6 95% 53.1%;
    --radius: 0.3rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;

    /*Custom*/
    --background-darker: 0, 0%, 0%, 0.9;
    --background-darker-solid: 0, 0%, 8%;
    --quantity-border: hsl(0, 0%, 52%);
  }

  .dark {
    --background: 0, 0%, 10%;
    --foreground: 60 9.1% 97.8%;
    --card: 20 14.3% 4.1%;
    --card-foreground: 60 9.1% 97.8%;
    --popover: 20 14.3% 4.1%;
    --popover-foreground: 60 9.1% 97.8%;
    --primary: 20.5 90.2% 48.2%;
    --primary-foreground: 60 9.1% 97.8%;
    --secondary: 12 6.5% 15.1%;
    --secondary-foreground: 60 9.1% 97.8%;
    --muted: 12 6.5% 15.1%;
    --muted-foreground: 24 5.4% 63.9%;
    --accent: 12 6.5% 15.1%;
    --accent-foreground: 60 9.1% 97.8%;
    --destructive: 0 72.2% 50.6%;
    --destructive-foreground: 60 9.1% 97.8%;
    --border: 12 6.5% 20.1%;
    --input: 210 15% 30%;
    --ring: 20.5 90.2% 48.2%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;

    /*Custom*/
    --background-darker: 0, 0%, 5%, 0.5;
    --background-darker-solid: 0, 0%, 8%;
    --quantity-border: hsl(0, 0%, 52%);
  }

  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
  

  /* html {
    font-size: 14px;
  } */

  /* Typography */
  h1 {
    @apply scroll-m-20 text-7xl font-bold;
  }

  h2 {
    @apply scroll-m-20 text-6xl font-bold;
  }

  h3 {
    @apply scroll-m-20 text-5xl font-bold;
  }

  h4 {
    @apply scroll-m-20 text-4xl font-bold;
  }

  h5 {
    @apply scroll-m-20 text-3xl font-bold;
  }

  h5 {
    @apply scroll-m-20 text-2xl font-bold;
  }

  p {
    @apply leading-7 text-base;
  }

  blockquote {
    @apply mt-6 border-l-2 pl-6 italic;
  }

  code {
    @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
  }

  input[type="number"]::-webkit-outer-spin-button,
  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"] {
    -webkit-appearance: none;
    margin: 0;
    -moz-appearance: textfield !important;
  }

  /* Hide scrollbar - Chrome, Edge, and Safari */
  /* *::-webkit-scrollbar {
    display: none;
  } */

  /* Link */
  .custom-link {
    color: hsl(var(--primary));
    text-decoration: none;
  }

  .custom-link:hover {
    text-decoration: underline;
    color: hsl(var(--primary) / 0.9);
  }
}

/* Custom container */
.layout {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  padding-top: 6rem;
  padding-bottom: 6rem;
}

/* Mimic tailwind container class */
/*sm*/
@media (min-width: 640px) {
  .layout {
    max-width: 640px;
  }
}
/*md*/
@media (min-width: 768px) {
  .layout {
    max-width: 768px;
  }
}
/*lg*/
@media (min-width: 1024px) {
  .layout {
    max-width: 1024px;
  }
}
/*xl*/
@media (min-width: 1280px) {
  .layout {
    max-width: 1280px;
  }
}
/*2xl*/
@media (min-width: 1536px) {
  .layout {
    max-width: 1536px;
  }
}

